# ofh-synthetic-data-generator

./: .env.example  .gitignore  LICENSE  PROJECT.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_issue.md  feature_request.md
configs/: default.yaml
data/: README.md
data/processed/: README.md
data/raw/: Our Future Health Baseline Questionnaire Logic v2.2.xlsx  README.md  our_future_health_data_dictionary_v14.xlsx
docs/: assumptions.md  methodology.md  testing.md
outputs/: README.md
src/ofh_synthetic_data/: __init__.py  cli.py  config.py  synthetic_ranges.py
src/ofh_synthetic_data/export/: decoded.py  writers.py
src/ofh_synthetic_data/generate/: __init__.py  registry_generator.py  show_if.py
src/ofh_synthetic_data/ingest/: __init__.py  registries.py  source_files.py
src/ofh_synthetic_data/validate/: __init__.py  outputs.py
tests/: test_config.py  test_decoded_export.py  test_generator.py  test_registries.py  test_validation.py
tests/qa/: test_output_schema.py
