[project]
name = "ofh-synthetic-data"
version = "0.1.0"
description = "Tools for generating reproducible synthetic Our Future Health-style questionnaire data."
authors = [{ name = "Our Future Health" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<4.0"
dependencies = [
  "pandas>=2.2,<3.0",
  "openpyxl>=3.1.5,<4.0",
  "PyYAML>=6.0.3,<7.0",
  "xlrd (>=2.0.1,<3.0)",
]

[project.scripts]
ofh-synthetic-data = "ofh_synthetic_data.cli:main"

[tool.poetry]
packages = [{ include = "ofh_synthetic_data", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=9.1.1,<10.0"
ruff = ">=0.6,<1.0"
types-pyyaml = ">=6.0,<7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "qa: full-output validation checks against included source artefacts",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
